--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Photography.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Photography.fxml
@@ -56,7 +56,7 @@
                         </HBox>
                         <MFXButton fx:id="btnSavePhoto" buttonType="RAISED" onAction="#onActionBtnSavePhoto" text="GUARDAR FOTO">
                            <graphic>
-                              <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" />
+                              <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" styleClass="SaveIcon" />
                            </graphic>
                            <styleClass>
                               <String fx:value="jfx-btnTakePhoto-" />
