Little adjust#11 commit
Ligeros detalles

--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegistrationMaintenance.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegistrationMaintenance.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="ColorGreenBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.RegistrationMaintenanceController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="PurpleBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.RegistrationMaintenanceController">
    <left>
       <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" prefWidth="121.0" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
