--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
@@ -22,9 +22,9 @@
             </VBox.margin>
             <children>
                <!-- Título -->
-               <Text text="Create Tourney" textAlignment="CENTER">
+               <Text styleClass="LargeLabel" text="Crear Torneo" textAlignment="CENTER">
                   <font>
-                     <Font name="Arial" size="24.0" />
+                     <Font name="Arial" size="12.0" />
                   </font>
                </Text>
             </children>
@@ -34,13 +34,13 @@
       
                <!-- Inputs Principales -->
                <VBox alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" spacing="15.0" HBox.hgrow="ALWAYS">
-                  <MFXTextField fx:id="txtTourneyName" floatingText="Tourney Name" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="300.0" VBox.vgrow="ALWAYS" />
-                  <MFXComboBox fx:id="tglLstSportType" floatingText="Sport Type" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
+                  <MFXTextField fx:id="txtTourneyName" floatingText="Nombre del Torneo" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="300.0" stylesheets="@Style.css" VBox.vgrow="ALWAYS" />
+                  <MFXComboBox fx:id="tglLstSportType" floatingText="Tipo de deporte" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
                </VBox>
                <VBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" spacing="15.0" HBox.hgrow="ALWAYS">
                   <children>
-                     <MFXTextField fx:id="txtMatchTime" floatingText="Time per Match (Minutes)" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="300.0" VBox.vgrow="ALWAYS" />
-                     <MFXButton fx:id="btnAdjustTeams" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#adjustSelectedTeamsSlice" prefHeight="43.0" prefWidth="262.0" text="Adjust Election" VBox.vgrow="ALWAYS" />
+                     <MFXTextField fx:id="txtMatchTime" floatingText="Tiempo del partido (minutos)" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="300.0" VBox.vgrow="ALWAYS" />
+                     <MFXButton fx:id="btnAdjustTeams" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#adjustSelectedTeamsSlice" prefHeight="43.0" prefWidth="262.0" stylesheets="@Style.css" text="Ajustar elección" VBox.vgrow="ALWAYS" />
                   </children>
                </VBox>
             </children>
@@ -48,36 +48,42 @@
 
          <!-- Selector de Cantidad de Equipos -->
          <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="30.0" spacing="10.0" VBox.vgrow="ALWAYS">
-            <Text text="Select the number of teams (between 2 and 64):" />
+            <Text text="Número de equipos (entre 2 a 64)" />
             <MFXSlider fx:id="sliderTeamCount" max="64" min="32" prefWidth="300.0" value="32" />
 
             
              </VBox>
          <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="30.0" VBox.vgrow="ALWAYS">
             <children>
-               <TableView fx:id="tblTeams" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="TableViewLightdBlue" HBox.hgrow="ALWAYS">
+               <TableView fx:id="tblTeams" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="TableViewLightdBlue" stylesheets="@Style.css" HBox.hgrow="ALWAYS">
                   <columns>
                      <TableColumn fx:id="colTeamName" prefWidth="259.0" text="Equipos disponibles" />
                   </columns>
                   <padding>
                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                   </padding>
+                  <columnResizePolicy>
+                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                  </columnResizePolicy>
                </TableView>
-               <TableView fx:id="tblTeams1" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="TableViewRose" HBox.hgrow="ALWAYS">
+               <TableView fx:id="tblTeams1" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="TableViewRose" stylesheets="@Style.css" HBox.hgrow="ALWAYS">
                   <columns>
                      <TableColumn fx:id="colTeamName1" prefWidth="259.0" text="Equipos Elegidos" />
                   </columns>
                   <padding>
                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                   </padding>
+                  <columnResizePolicy>
+                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                  </columnResizePolicy>
                </TableView>
             </children>
          </HBox>
 
          <!-- Botones Inferiores -->
          <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
-            <MFXButton fx:id="btnCancel" onAction="#OnActionBtnCancel" prefWidth="100.0" text="Cancel" />
-            <MFXButton fx:id="btnStart" onAction="#createTourney" prefWidth="100.0" text="Create" />
+            <MFXButton fx:id="btnCancel" onAction="#OnActionBtnCancel" prefWidth="100.0" stylesheets="@Style.css" text="Volver" />
+            <MFXButton fx:id="btnStart" onAction="#createTourney" prefWidth="100.0" text="Crear" />
          </HBox>
       </VBox>
    </children>
