--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TournamentHistory.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TournamentHistory.fxml
@@ -17,12 +17,12 @@
     <VBox fx:id="mainContainer" alignment="TOP_CENTER" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <!-- Encabezado: Título y filtros -->
         <VBox fx:id="header" alignment="CENTER" spacing="15.0" styleClass="header" VBox.vgrow="NEVER">
-            <Label fx:id="titleLabel" text="Historial de Torneos" styleClass="LargeLabel" />
-            <HBox fx:id="filters" alignment="CENTER" spacing="15.0" maxWidth="Infinity">
+            <Label fx:id="titleLabel" styleClass="LargeLabel" text="Historial de Torneos" />
+            <HBox fx:id="filters" alignment="CENTER" maxWidth="Infinity" spacing="15.0">
                 <MFXTextField fx:id="teamSearch" floatingText="Buscar equipo (nombre o ID)" styleClass="mfx-text-field" HBox.hgrow="ALWAYS" />
-                <MFXComboBox fx:id="sportFilter" floatingText="Deporte" styleClass="mfx-combo-box" prefWidth="200.0" />
-                <MFXButton fx:id="searchButton" text="Buscar" styleClass="mfx-button" />
-                <MFXButton fx:id="clearButton" text="Limpiar" styleClass="mfx-button" />
+                <MFXComboBox fx:id="sportFilter" floatingText="Deporte" prefWidth="200.0" styleClass="mfx-combo-box" />
+                <MFXButton fx:id="searchButton" styleClass="mfx-button" text="Buscar" />
+                <MFXButton fx:id="clearButton" styleClass="mfx-button" text="Limpiar" />
             </HBox>
         </VBox>
 
@@ -35,21 +35,24 @@
                     <TableColumn fx:id="dateColumn" text="Fecha" />
                     <TableColumn fx:id="positionColumn" text="Posición" />
                 </columns>
+            <columnResizePolicy>
+               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
             </TableView>
 
             <!-- Panel de detalles -->
             <VBox fx:id="detailsPanel" alignment="TOP_CENTER" spacing="10.0" styleClass="panel" HBox.hgrow="ALWAYS">
-                <Label fx:id="detailsTitle" text="Seleccioná un torneo" styleClass="SmallLabel" />
-                <Label fx:id="positionLabel" text="" styleClass="info" wrapText="true" maxWidth="Infinity" />
-                <Label fx:id="matchesLabel" text="" styleClass="info" wrapText="true" maxWidth="Infinity" />
-                <Label fx:id="statsLabel" text="" styleClass="info" wrapText="true" maxWidth="Infinity" />
-                <Label fx:id="generalStatsLabel" text="" styleClass="info" wrapText="true" maxWidth="Infinity" />
+                <Label fx:id="detailsTitle" styleClass="SmallLabel" text="Seleccioná un torneo" />
+                <Label fx:id="positionLabel" maxWidth="Infinity" styleClass="info" text="" wrapText="true" />
+                <Label fx:id="matchesLabel" maxWidth="Infinity" styleClass="info" text="" wrapText="true" />
+                <Label fx:id="statsLabel" maxWidth="Infinity" styleClass="info" text="" wrapText="true" />
+                <Label fx:id="generalStatsLabel" maxWidth="Infinity" styleClass="info" text="" wrapText="true" />
             </VBox>
         </HBox>
 
         <!-- Pie: Certificado -->
         <HBox fx:id="footer" alignment="CENTER" spacing="20.0" styleClass="footer" VBox.vgrow="NEVER">
-            <MFXButton fx:id="certificateButton" text="Generar Certificado" disable="true" styleClass="mfx-button">
+            <MFXButton fx:id="certificateButton" disable="true" styleClass="mfx-button" text="Generar Certificado">
                 <graphic>
                     <ImageView fx:id="certificatePreview" fitHeight="24.0" fitWidth="24.0" preserveRatio="true" styleClass="preview">
                         <image>
