--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TourneysInfo.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TourneysInfo.fxml
@@ -3,7 +3,6 @@
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -15,77 +14,49 @@
       <ImageView fitHeight="600" fitWidth="800" preserveRatio="true" />
       <StackPane maxHeight="400" maxWidth="600" AnchorPane.bottomAnchor="50" AnchorPane.leftAnchor="50" AnchorPane.rightAnchor="50" AnchorPane.topAnchor="50">
          <StackPane fx:id="ticketInferior" onMouseClicked="#slideBackTicket">
-            <ImageView fitHeight="400" fitWidth="600" preserveRatio="true">
-               <image>
-                  <Image url="@../resources/tiqueteInterno.jpg" />
-               </image>
-            </ImageView>
+            <ImageView fitHeight="415.0" fitWidth="600" preserveRatio="true" styleClass="BackTicket" />
             <VBox alignment="CENTER" spacing="20" style="-fx-background-color: transparent;" VBox.vgrow="ALWAYS">
                <padding>
                   <Insets bottom="20" left="20" right="20" top="20" />
                </padding>
                <HBox alignment="CENTER" spacing="30">
                   <VBox styleClass="StarIcon" stylesheets="@Style.css">
-                     <ImageView fitHeight="60" fitWidth="60" preserveRatio="true">
-                        <image>
-                           <Image url="@../resources/estrella.png" />
-                        </image>
-                     </ImageView>
+                     <ImageView fitHeight="60" fitWidth="60" preserveRatio="true" styleClass="StarIcon" />
                   </VBox>
                   <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Ganador:" />
                   <Label fx:id="lblWinner" styleClass="SmallLabel" stylesheets="@Style.css" text="Team" />
                   <MFXButton fx:id="btnShowCertificate" stylesheets="@Style.css" text="Certificado">
                      <graphic>
                         <VBox styleClass="InteractiveVBox">
-                           <ImageView fitHeight="30" fitWidth="30" preserveRatio="true">
-                              <image>
-                                 <Image url="@../resources/Impresora.png" />
-                              </image>
-                           </ImageView>
+                           <ImageView fitHeight="30" fitWidth="30" preserveRatio="true" styleClass="PrintIcon" />
                         </VBox>
                      </graphic>
                   </MFXButton>
                </HBox>
                <HBox alignment="CENTER" spacing="30">
                   <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
-                     <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
-                        <image>
-                           <Image url="@../resources/ajedrez.png" />
-                        </image>
-                     </ImageView>
+                     <ImageView fitHeight="40" fitWidth="40" preserveRatio="true" styleClass="GameIcon" />
                   </VBox>
                   <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Equipos:" />
                   <Label fx:id="lblTeams" styleClass="SmallLabel" stylesheets="@Style.css" text="Cantidad" />
                   <MFXButton fx:id="btnShowTeams" styleClass="mfx-button" stylesheets="@Style.css" text="Ver Equipos">
                      <graphic>
                         <VBox styleClass="InteractiveVBox">
-                           <ImageView fitHeight="30" fitWidth="30" preserveRatio="true">
-                              <image>
-                                 <Image url="@../resources/lupa.png" />
-                              </image>
-                           </ImageView>
+                           <ImageView fitHeight="30" fitWidth="30" preserveRatio="true" styleClass="LookIcon" />
                         </VBox>
                      </graphic>
                   </MFXButton>
                </HBox>
                <HBox alignment="CENTER" spacing="30">
                   <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
-                     <ImageView fitHeight="50" fitWidth="50" preserveRatio="true">
-                        <image>
-                           <Image url="@../resources/TroupheyWithKeys.png" />
-                        </image>
-                     </ImageView>
+                     <ImageView fitHeight="50" fitWidth="50" preserveRatio="true" styleClass="TrophyKeysIcon" />
                   </VBox>
                   <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Rounds:" />
                   <Label fx:id="lblRounds" styleClass="SmallLabel" stylesheets="@Style.css" text="Cantidad" />
                   <MFXButton fx:id="btnShowKeys" styleClass="mfx-button" stylesheets="@Style.css" text="Ver Llaves">
                      <graphic>
                         <VBox styleClass="InteractiveVBox">
-                           <ImageView fitHeight="30" fitWidth="30" preserveRatio="true">
-                              <image>
-                                 <Image url="@../resources/lupa.png" />
-                              </image>
-                           </ImageView>
+                           <ImageView fitHeight="30" fitWidth="30" preserveRatio="true" styleClass="LookIcon" />
                         </VBox>
                      </graphic>
                   </MFXButton>
@@ -93,22 +64,14 @@
             </VBox>
          </StackPane>
          <StackPane fx:id="ticketSuperior" onMouseClicked="#slideTicket">
-            <ImageView fitHeight="400" fitWidth="600" preserveRatio="true">
-               <image>
-                  <Image url="@../resources/tiqueteMejorad.jpg" />
-               </image>
-            </ImageView>
+            <ImageView fitHeight="400" fitWidth="600.0" preserveRatio="true" styleClass="FrontTicket" />
             <VBox alignment="CENTER" spacing="30" style="-fx-background-color: transparent;" VBox.vgrow="ALWAYS">
                <padding>
                   <Insets bottom="20" left="20" right="20" top="20" />
                </padding>
                <HBox alignment="CENTER" spacing="40">
                   <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
-                     <ImageView fitHeight="100" fitWidth="100" preserveRatio="true">
-                        <image>
-                           <Image url="@../resources/trophy.png" />
-                        </image>
-                     </ImageView>
+                     <ImageView fitHeight="100" fitWidth="100" preserveRatio="true" styleClass="TrophyIcon" />
                   </VBox>
                   <VBox alignment="CENTER" spacing="15">
                      <HBox alignment="CENTER" spacing="10">
@@ -123,11 +86,7 @@
                </HBox>
                <HBox alignment="CENTER" spacing="20">
                   <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
-                     <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
-                        <image>
-                           <Image url="@../resources/time-and-date.png" />
-                        </image>
-                     </ImageView>
+                     <ImageView fitHeight="40" fitWidth="40" preserveRatio="true" styleClass="ClockIcon" />
                   </VBox>
                   <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Minutes:" />
                   <Label fx:id="lblTime" styleClass="SmallLabel" stylesheets="@Style.css" text="Time" />
