--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Maintenance.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Maintenance.fxml
@@ -23,6 +23,7 @@
             <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" spacing="15.0" styleClass="boxLightBlue" VBox.vgrow="ALWAYS">
                <children>
                   <MFXTextField fx:id="txtNameSearch" floatMode="BORDER" floatingText="Buscar por nombre" maxWidth="1.7976931348623157E308" onKeyReleased="#OnKeyReleasedNameSearch" HBox.hgrow="ALWAYS" />
+                  <MFXTextField fx:id="txtName" floatMode="BORDER" floatingText="Nombre" layoutX="25.0" layoutY="15.0" maxWidth="1.7976931348623157E308" onKeyReleased="#OnKeyReleasedNameSearch" HBox.hgrow="ALWAYS" />
                   <MFXComboBox fx:id="cmbSportSearch" floatMode="BORDER" floatingText="Deporte" onAction="#OnActionCmbSportSearch">
                      <HBox.margin>
                         <Insets left="25.0" />
@@ -54,6 +55,15 @@
                         <TableColumn fx:id="tclSport" prefWidth="503.0" text="Nombre" />
                      </columns>
                   </TableView>
+                  <TableView fx:id="tbvTourney" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="TableViewLightdBlue" stylesheets="@Style.css" HBox.hgrow="ALWAYS">
+                     <padding>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                     </padding>
+                     <columns>
+                        <TableColumn fx:id="tclTourney" prefWidth="503.0" text="Nombre" />
+                        <TableColumn fx:id="tclTourneySportType" prefWidth="503.0" text="Deporte" />
+                     </columns>
+                  </TableView>
                </children>
                <VBox.margin>
                   <Insets left="15.0" right="15.0" />
@@ -62,6 +72,7 @@
             <HBox alignment="CENTER" layoutX="10.0" layoutY="210.0" maxWidth="1.7976931348623157E308" spacing="40.0" VBox.vgrow="ALWAYS">
                <children>
                   <MFXButton fx:id="btnModify" onAction="#OnActionBtnModify" text="Modificar" />
+                  <MFXButton fx:id="btnAccept" layoutX="193.0" layoutY="10.0" onAction="#OnActionBtnAccept" text="Aceptar" />
                   <MFXButton fx:id="btnCancel" onAction="#OnActionBtnCancel" text="Cancelar" />
                </children>
             </HBox>
