--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TournamentHistory.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TournamentHistory.fxml
@@ -2,78 +2,62 @@
 
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import io.github.palexdev.materialfx.controls.MFXComboBox?>
+<?import io.github.palexdev.materialfx.controls.MFXScrollPane?>
 <?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="rootPane" styleClass="StadiumStandBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.TournamentHistoryController">
-    <VBox fx:id="mainContainer" alignment="TOP_CENTER" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <!-- Header -->
-        <VBox fx:id="header" alignment="CENTER" spacing="15.0" styleClass="header" VBox.vgrow="NEVER">
-            <HBox alignment="CENTER" spacing="10.0">
-                <HBox HBox.hgrow="ALWAYS" />
-                <Label fx:id="titleLabel" styleClass="LargeLabel" text="Historial de Torneos" />
-                <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
-                    <ImageView fx:id="lobbyIcon" fitHeight="50.0" fitWidth="50.0" preserveRatio="true" styleClass="LobbyIcon">
-                        <image>
-                            <Image url="@../resources/lobby.png" />
-                        </image>
-                    </ImageView>
-                    <padding>
-                        <Insets right="10.0" />
-                    </padding>
-                </HBox>
-            </HBox>
-            <HBox fx:id="filters" alignment="CENTER" maxWidth="Infinity" spacing="15.0">
-                <MFXTextField fx:id="teamSearch" floatingText="Buscar equipo (nombre o ID)" styleClass="mfx-text-field" HBox.hgrow="ALWAYS" />
-                <MFXComboBox fx:id="teamFilter" floatingText="Equipo" prefWidth="200.0" styleClass="mfx-combo-box boxLightBlue" />
-                <MFXComboBox fx:id="sportFilter" floatingText="Deporte" prefWidth="200.0" styleClass="mfx-combo-box boxLightBlue" />
-                <MFXButton fx:id="searchButton" text="Buscar" styleClass="mfx-button" />
-                <MFXButton fx:id="clearButton" text="Limpiar" styleClass="mfx-button" />
-            </HBox>
-        </VBox>
-        <!-- Content -->
-        <HBox fx:id="content" spacing="15.0" VBox.vgrow="ALWAYS">
-            <TableView fx:id="tournamentTable" styleClass="TableViewLightdBlue" HBox.hgrow="ALWAYS">
+<AnchorPane fx:id="rootPane" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.TournamentHistoryController">
+    <VBox fx:id="mainContainer" alignment="TOP_CENTER" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <!-- Filtros -->
+        <HBox fx:id="filters" alignment="CENTER" spacing="10.0" VBox.vgrow="NEVER">
+            <MFXTextField fx:id="teamSearch" floatingText="Buscar equipo" HBox.hgrow="ALWAYS" />
+            <MFXComboBox fx:id="teamFilter" floatingText="Equipo" prefWidth="150.0" />
+            <MFXComboBox fx:id="sportFilter" floatingText="Deporte" prefWidth="150.0" />
+            <MFXButton fx:id="searchButton" text="Buscar" />
+            <MFXButton fx:id="clearButton" text="Limpiar" />
+        </HBox>
+        <!-- Contenido -->
+        <HBox fx:id="content" spacing="10.0" VBox.vgrow="ALWAYS">
+            <!-- Tabla de torneos -->
+            <TableView fx:id="tournamentTable" HBox.hgrow="ALWAYS">
                 <columns>
-                    <TableColumn fx:id="nameColumn" text="Nombre" />
-                    <TableColumn fx:id="minutesColumn" text="Minutos" />
-                    <TableColumn fx:id="sportColumn" text="Deporte" />
-                    <TableColumn fx:id="stateColumn" text="Estado" />
-                    <TableColumn fx:id="winnerColumn" text="Ganador" />
+                    <TableColumn fx:id="nameColumn" prefWidth="150.0" text="Nombre" />
+                    <TableColumn fx:id="minutesColumn" prefWidth="80.0" text="Minutos" />
+                    <TableColumn fx:id="sportColumn" prefWidth="100.0" text="Deporte" />
+                    <TableColumn fx:id="stateColumn" prefWidth="100.0" text="Estado" />
+                    <TableColumn fx:id="winnerColumn" prefWidth="120.0" text="Ganador" />
                 </columns>
             </TableView>
-            <VBox fx:id="detailsPanel" alignment="TOP_CENTER" spacing="10.0" styleClass="panel" HBox.hgrow="ALWAYS">
-                <Label fx:id="detailsTitle" styleClass="SmallLabel" text="Seleccioná un torneo y un equipo" />
-                <Label fx:id="positionLabel" maxWidth="Infinity" styleClass="info" text="" wrapText="true" />
-                <Label fx:id="matchesLabel" maxWidth="Infinity" styleClass="info" text="" wrapText="true" />
-                <Label fx:id="statsLabel" maxWidth="Infinity" styleClass="info" text="" wrapText="true" />
-                <Label fx:id="generalStatsLabel" maxWidth="Infinity" styleClass="info" text="" wrapText="true" />
+            <!-- Equipos y detalles -->
+            <VBox spacing="10.0" HBox.hgrow="ALWAYS">
+                <!-- Carrusel de equipos -->
+                <Label text="Equipos participantes" />
+                <MFXScrollPane hbarPolicy="ALWAYS" vbarPolicy="NEVER" maxHeight="120.0" fitToHeight="true" VBox.vgrow="NEVER">
+                    <content>
+                        <HBox fx:id="teamsPane" alignment="CENTER_LEFT" spacing="10.0">
+                            <padding>
+                                <Insets left="10.0" right="10.0" top="5.0" bottom="5.0" />
+                            </padding>
+                        </HBox>
+                    </content>
+                </MFXScrollPane>
+                <!-- Detalles -->
+                <VBox fx:id="detailsPanel" alignment="TOP_CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
+                    <Label fx:id="detailsTitle" text="Seleccioná un torneo y un equipo" />
+                    <Label fx:id="positionLabel" maxWidth="Infinity" text="" wrapText="true" />
+                    <Label fx:id="matchesLabel" maxWidth="Infinity" text="" wrapText="true" />
+                    <Label fx:id="statsLabel" maxWidth="Infinity" text="" wrapText="true" />
+                    <Canvas fx:id="statsCanvas" height="100.0" width="280.0" />
+                    <Label fx:id="generalStatsLabel" maxWidth="Infinity" text="" wrapText="true" />
+                </VBox>
             </VBox>
-        </HBox>
-        <!-- Footer -->
-        <HBox fx:id="footer" alignment="CENTER" spacing="20.0" styleClass="footer" VBox.vgrow="NEVER">
-            <HBox HBox.hgrow="ALWAYS" />
-            <MFXButton fx:id="btnRefresh" text="Refrescar" styleClass="mfx-button" />
-            <MFXButton fx:id="btnParticipants" text="Participantes" styleClass="mfx-button" disable="true" />
-            <MFXButton fx:id="btnBrackets" text="Llaves" styleClass="mfx-button" disable="true" />
-            <MFXButton fx:id="certificateButton" text="Generar Certificado" disable="true" styleClass="mfx-button">
-                <graphic>
-                    <ImageView fx:id="certificatePreview" fitHeight="24.0" fitWidth="24.0" preserveRatio="true" styleClass="preview">
-                        <image>
-                            <Image url="@../resources/Impresora.png" />
-                        </image>
-                    </ImageView>
-                </graphic>
-            </MFXButton>
-            <HBox HBox.hgrow="ALWAYS" />
         </HBox>
     </VBox>
 </AnchorPane>
